fix head image alignment

--- a/style.css
+++ b/style.css
@@ -137,6 +137,3 @@ a.button{
   margin-top: 40px;
   color: #fdf7dd;
 }
-img.headimage{
-  align: center;
-}
